[package]
name = "revm-inspector"
version = "0.1.0"
edition = "2021"


[dependencies]
num-bigint = "0.4"
eyre = "0.6.8"
hex = "0.4.3"
primitive-types = { version = "0.12", default-features = false }
bytes = "1.2.1"
ruint = { version = "1.6.0", features = ["rlp", "serde", "primitive-types", "num-bigint"] }
sha3 = "0.10.1"
maplit = "1.0.2"
libc = "0.2.126"
lazy_static = "1.4.0"
serde = {version="1.0.144", features=["derive"]}
serde_json = {version="1.0.81"}
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
simple_logger = "2.1.0"

tokio = { version = "1.31.0", features = ["full"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-addressbook = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false }

revm = { version = "3" }
